--- a/sims/src/main/resources/application.properties
+++ b/sims/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.hibernate.ddl-auto= update
 # show queries on console
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.main.allow-circular-references=true
